--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,8 @@ package = "@netlify/plugin-sitemap"
 
   [plugins.inputs]
   buildDir = "public"
+
+[[plugins]]
+  package = 'netlify-plugin-search-index'
+  [plugins.inputs]
+    exclude = ['/ignore-this-file.html', '''\/page\/''']
